mengupdate proses transcribe

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Model Whisper: tiny, base, small, medium, large
-WHISPER_MODEL=medium
+WHISPER_MODEL=small
 
 # Bahasa (kosongkan untuk auto-detect)
 # Contoh: id, en, ja
