menambah env baru, mengupdate python buffer

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@ WHISPER_MODEL=small
 # Bahasa (kosongkan untuk auto-detect)
 # Contoh: id, en, ja
 WHISPER_LANGUAGE=id
+
+# Download video dari YouTube (true/false)
+# Jika false, tidak akan download video dan tidak akan transcribe
+ENABLE_DOWNLOAD=true
+
+# Transkripsi audio (true/false)
+# Jika false, tidak akan download model dan tidak akan transcribe
+# Jika true, akan download model dan melakukan transcribe
+ENABLE_TRANSCRIPTION=false
