membuat fitur model cache

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ ENABLE_DOWNLOAD=true
 # Jika false, tidak akan download model dan tidak akan transcribe
 # Jika true, akan download model dan melakukan transcribe
 ENABLE_TRANSCRIPTION=false
+
+# Force download model meskipun sudah ada di cache (true/false)
+FORCE_DOWNLOAD_MODEL=false
