update beberapa file, memindahkan resource limit ke env

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,13 @@ ENABLE_TRANSCRIPTION=false
 
 # Force download model meskipun sudah ada di cache (true/false)
 FORCE_DOWNLOAD_MODEL=false
+
+# Docker resource limits
+# CPU limit (contoh: 0.5, 1, 2)
+DOCKER_CPU_LIMIT=0.75
+
+# Memory limit (contoh: 512m, 1g, 2g, 4g, 6g, 8g, 10g, ...)
+DOCKER_MEMORY_LIMIT=6g
+
+# Memory reservation - minimum guaranteed memory (contoh: 512m, 1g, 2g, 4g, ...)
+DOCKER_MEMORY_RESERVATION=2g
