--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,14 @@
-output/
-.claude/
 __pycache__/
 *.pyc
+*.out
 .git/
+.env
+model-cache/
+
+*.mp3
+*.mp4
+*.mkv
+*.webm
+*.avi
+*.txt
+!requirements.txt
