perbaikan script, aktifkan venv, args baru

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# ===================================================
+# Pengaturan untuk transkripsi
+# ===================================================
+
 # Model Whisper: tiny, base, small, medium, large
-WHISPER_MODEL=small
+WHISPER_MODEL=tiny
 
 # Bahasa (kosongkan untuk auto-detect)
 # Contoh: id, en, ja
@@ -12,10 +16,14 @@ ENABLE_DOWNLOAD=true
 # Transkripsi audio (true/false)
 # Jika false, tidak akan download model dan tidak akan transcribe
 # Jika true, akan download model dan melakukan transcribe
-ENABLE_TRANSCRIPTION=false
+ENABLE_TRANSCRIPTION=true
 
 # Force download model meskipun sudah ada di cache (true/false)
 FORCE_DOWNLOAD_MODEL=false
+
+# ===================================================
+# Pengaturan untuk docker-compose
+# ===================================================
 
 # Docker resource limits
 # CPU limit (contoh: 0.5, 1, 2)
