mengupdate .env.example

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,14 @@ ENABLE_TRANSCRIPTION=true
 # Force download model meskipun sudah ada di cache (true/false)
 FORCE_DOWNLOAD_MODEL=false
 
+# Durasi tiap potongan audio saat chunking, dalam detik (default: 3600 = 60 menit)
+# Audio akan dipotong menjadi segmen-segmen kecil sebelum ditranskrip
+CHUNK_DURATION=3600
+
+# Batas durasi audio untuk mengaktifkan chunking, dalam detik (default: 7200 = 120 menit)
+# Audio yang lebih panjang dari nilai ini akan dipotong terlebih dahulu
+CHUNK_THRESHOLD=7200
+
 # ===================================================
 # Pengaturan untuk docker-compose
 # ===================================================
